working on fixing styling on mobile screens

--- a/style.css
+++ b/style.css
@@ -147,8 +147,6 @@ body.grayscale {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  height: 100%;
 }
 
 .card {
@@ -174,6 +172,7 @@ body.grayscale {
   text-align: center;
   font-family: FbSpoiler-bold;
   padding-top: 6px;
+  white-space: nowrap;
 
 }
 
@@ -445,7 +444,7 @@ input::placeholder {
   transform: translateY(0);
 }
 
-@media only screen and (min-width: 1040px) {
+@media only screen and (min-width: 1140px) {
   .logo-top-mobile {
     display: none;
   }
@@ -550,14 +549,10 @@ input::placeholder {
   }
 }
 
-@media only screen and (max-width: 1039px) {
+@media only screen and (max-width: 1140px) {
   #mobile-logo {
     width: 15vw;
     height: 15vw;
-  }
-
-  .left {
-    margin-bottom: 0px;
   }
 
   .right {
@@ -581,16 +576,9 @@ input::placeholder {
     font-size: 36px;
     padding: 0px 10px 30px;
   }
-
-  .subtitle-mobile-container {
-    display: flex;
-    width: 50%;
-    /* align-items: center; */
-    z-index: 2;
-  }
   
   .form-title {
-    font-size: 15px;
+    font-size: 20px;
   }
 
   .right p {
@@ -601,12 +589,16 @@ input::placeholder {
     flex-direction: column;
   }
 
-  .left-contents {
+  .subtitle-mobile-container {
     width: 100%;
   }
 
-  .left {
-    width: 100%;
+  .mobile-desc{
+    color: var(--primary-color);
+    font-size: 20px;
+    text-align: center;
+    font-family: FbSpoiler-bold;
+    padding-top: 6px;
   }
 
   .form-circle-container {
@@ -615,7 +607,7 @@ input::placeholder {
 
   .circle-gift-container-mobile {
     position: absolute;
-    top: -120px;
+    top: -20%;
     left: 20px;
     color: white;
   }
@@ -625,8 +617,8 @@ input::placeholder {
     flex-direction: column;
     text-align: center;
     justify-content: center;
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     background-color: var(--primary-color);
     padding: 10% 5%;
     margin: 10% 0;
@@ -639,20 +631,19 @@ input::placeholder {
 
   .gifth2-mobile {
     color: white;
-    font-size: 3.2em;
+    font-size: 30px;
   }
 
   .gift-desc-mobile {
     color: #fedc01;
     white-space: nowrap;
-    font-size: 1em;
-    margin-top: -8%;
+    font-size: 11px;
     color: #fedc01;
   }
 
   #terms-gift {
-    font-size: 10px;
-    /* padding: 0 10px; */
+    font-size: 5px;
+    margin-top: 5px;
     white-space: nowrap;
 
   }
